# Argon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dependency.md
cmake-scripts/: HunterGate.cmake
doc/: examaple_download_config.json
src/: CMakeLists.txt  main.cpp
src/download_file_body/: CMakeLists.txt  download_file_body.cpp  download_file_body.hpp
src/gui/: CMakeLists.txt  argon_app.cpp  argon_app.hpp  argon_gui.hpp  download_columns.cpp  download_columns.hpp  download_file_chooser.hpp  download_link_input.cpp  download_link_input.hpp  download_not_supported_dialog.cpp  download_not_supported_dialog.hpp
src/gui/argon_app/: argon_app.cpp  argon_app.hpp
src/gui/download_file_input/: download_link_input.cpp  download_link_input.hpp
src/gui/download_not_supported_dialog/: download_not_supported_dialog.cpp
src/network/: CMakeLists.txt  download.cpp  download.hpp  download_handler.cpp  download_handler.hpp  download_scheduler.cpp  download_scheduler.hpp  network.cpp  network.hpp  sub_download.cpp  sub_download.hpp
src/network/download/: CMakeLists.txt  download.cpp  download.hpp
src/network/download_scheduler/: CMakeLists.txt  download_scheduler.cpp  download_scheduler.hpp
src/network/network/: CMakeLists.txt  network.cpp  network.hpp
test/: CMakeLists.txt  gtest.cpp
test/network/: CMakeLists.txt  network_test.cpp
